force-app/main/default/objects/pse__VersionItem_EstimatesVsActuals__c/fields/pse__Actual_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Actual_Hours__c</fullName>
    <description>The actual hours for estimates vs actuals referenced in the version.</description>
    <inlineHelpText>The actual hours for estimates vs actuals referenced in the version.</inlineHelpText>
    <label>Actual Hours</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>