force-app/main/default/objects/pse__VersionItem_EstimatesVsActuals__c/fields/pse__AssignmentName__c.field-meta.xml
<CustomField>
    <fullName>pse__AssignmentName__c</fullName>
    <description>The assignment name for estimates vs actuals referenced in the version.</description>
    <inlineHelpText>The assignment name for estimates vs actuals referenced in the version.</inlineHelpText>
    <label>Assignment Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>