force-app/main/default/objects/pse__VersionItem_EstimatesVsActuals__c/fields/pse__Estimated_Days__c.field-meta.xml
<CustomField>
    <fullName>pse__Estimated_Days__c</fullName>
    <description>The estimated days for estimates vs actuals referenced in the version.</description>
    <inlineHelpText>The estimated days for estimates vs actuals referenced in the version.</inlineHelpText>
    <label>Estimated Days</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>