force-app/main/default/objects/pse__VersionItem_EstimatesVsActuals__c/fields/pse__Version__c.field-meta.xml
<CustomField>
    <fullName>pse__Version__c</fullName>
    <description>A lookup to the version.</description>
    <inlineHelpText>A lookup to the version.</inlineHelpText>
    <label>Version</label>
    <referenceTo>pse__Version__c</referenceTo>
    <relationshipLabel>Version Item Estimates Vs Actuals</relationshipLabel>
    <relationshipName>VersionItem_EstimatesVsActuals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>